syntax="proto3";

package proto.external_plugin;

option go_package = "github.com/micro/micro/v3/proto/inbox_marketing";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message ExternalPluginConnectBodyRequest {
    string plugin_name = 1;
    string plugin_type = 2;
    Config config = 3;
}

message Config {
    Incom incom = 1;
    Abenla abenla = 2;
    Fpt fpt = 3;
}

message Incom {
    string username = 1;
    string  password = 2;
    bool status = 3;
}

message Fpt {
    string grant_type = 1;
    string client_id = 2;
    string client_secret = 3;
    string scope = 4;
    bool status = 5;
}

message Abenla {
    string username = 1;
    string  password = 2;
    bool status = 3;
}

message ExternalPluginConnectResponse {
    string code = 1;
    string message = 2;
    google.protobuf.Struct data = 3;
    string id = 4;
}

service ExternalPluginConnectService {
    rpc PostCreateConnect(ExternalPluginConnectBodyRequest) returns (ExternalPluginConnectResponse) {
        option (google.api.http) = {
            post: "/bss/v1/external-plugin-connect/connect",
            body: "*",
        };
    }
}